--- a/modules-available/locations/templates/locations.html
+++ b/modules-available/locations/templates/locations.html
@@ -24,9 +24,10 @@
 			<tr>
 				<td>
 					<div style="display:inline-block;width:{{depth}}em"></div>
-					<a href="#" onclick="slxOpenLocation(this, {{locationid}}); return false">{{locationname}} <b class="caret"></b></a>
+					<a href="#" class="{{linkClass}}" onclick="slxOpenLocation(this, {{locationid}}); return false">{{locationname}}{{^linkClass}} <b class="caret"></b>{{/linkClass}}</a>
 				</td>
 				<td class="text-nowrap" align="right">
+					{{^linkClass}}
 					{{#havestatistics}}
 					{{clientCount}}
 					<span class="text-muted">
@@ -35,13 +36,17 @@
 					</span>
 					<a class="btn btn-default btn-xs" href="?do=Statistics&amp;show=list&amp;filters=location={{locationid}}"><span class="glyphicon glyphicon-eye-open"></span></a>
 					{{/havestatistics}}
+					{{/linkClass}}
 				</td>
 				<td class="text-nowrap" align="right">
+					{{^linkClass}}
 					{{#havestatistics}}
 					{{clientLoad}}
 					{{/havestatistics}}
+					{{/linkClass}}
 				</td>
 				<td class="text-nowrap">
+					{{^linkClass}}
 					{{#havebaseconfig}}
 					<div class="pull-right" style="z-index:-1">
 						<a class="btn btn-default btn-xs" href="?do=baseconfig&amp;module=locations&amp;locationid={{locationid}}"><span class="glyphicon glyphicon-edit"></span></a>
@@ -50,8 +55,10 @@
 					{{lang_overrideCount}}: {{overriddenVars}}&emsp;&emsp;
 					{{/overriddenVars}}
 					{{/havebaseconfig}}
+					{{/linkClass}}
 				</td>
 				<td class="text-nowrap">
+					{{^linkClass}}
 					{{#havesysconfig}}
 					<div class="pull-right">
 						<a class="btn btn-default btn-xs" href="?do=sysconfig&amp;locationid={{locationid}}"><span class="glyphicon glyphicon-edit"></span></a>
@@ -60,6 +67,7 @@
 					{{configName}}&emsp;&emsp;
 					</span>
 					{{/havesysconfig}}
+					{{/linkClass}}
 				</td>
 			</tr>
 		{{/list}}
@@ -90,12 +98,10 @@
 					<button id="saveLocationRows" type="submit" class="btn btn-primary" style="display: none">
 						<span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}
 					</button>
-					<button class="btn btn-success" type="button" onclick="slxAddLocationRow()">
+					<button {{^addAllowed}}disabled{{/addAllowed}} class="btn btn-success" type="button" onclick="slxAddLocationRow()">
 						<span class="glyphicon glyphicon-plus"></span> {{lang_location}}
 					</button>
-
 				</td>
-
 			</tr>
 		</table>
 	</form>
@@ -122,8 +128,7 @@ function slxAddLocationRow() {
 	tr.before('<tr id="row' + slxAddCounter + '">\
 		<td><input class="form-control" type="text" name="newlocation[' + slxAddCounter + ']" placeholder="{{lang_locationName}}" pattern=".*\\S.*"></td>\
 		<td><select class="form-control" name="newparent[' + slxAddCounter + ']">\
-		<option value="0">{{lang_noParent}}</option>\
-		{{#list}}<option value="{{locationid}}">{{locationpad}} {{locationname}}</option>{{/list}}\
+		{{#addAllowedList}}<option {{disabled}} value="{{locationid}}">{{locationpad}} {{locationname}}</option>{{/addAllowedList}}\
 		</select></td>\
 		<td class="text-center"><button class="btn btn-default btn-sm" type="button" onclick="removeNewLocationRow(' + slxAddCounter + ')"><span class="glyphicon glyphicon-remove"></span></button></td>\
 	</tr>');
