--- a/modules-available/dozmod/templates/userlist.html
+++ b/modules-available/dozmod/templates/userlist.html
@@ -7,7 +7,7 @@
 	<div class="panel-body">
 		<p>{{lang_userListDescription}}</p>
 		<div class="table-responsive">
-			<table class="table table-stripped table-condensed stupidtable">
+			<table class="table table-stripped table-condensed table-hover stupidtable">
 				<thead>
 					<tr>
 						<th data-sort="string">{{lang_user}}</th>
