[backup] added glyphicons to download/upload buttons

--- a/modules-available/backup/templates/_page.html
+++ b/modules-available/backup/templates/_page.html
@@ -7,7 +7,7 @@
 		<div class="panel-heading">{{lang_backup}}</div>
 		<div class="panel-body">
 			<p>{{lang_backupDescription}}</p>
-			<button class="btn btn-primary pull-right" type="submit">{{lang_download}}</button>
+			<button class="btn btn-primary pull-right" type="submit"><span class="glyphicon glyphicon-save"></span> {{lang_download}}</button>
 		</div>
 	</div>
 </form>
@@ -41,7 +41,7 @@
 				</div>
 				<p><i>{{lang_dozmodExplanation}}</i></p>
 			</div>
-			<button class="btn btn-primary pull-right" type="submit">{{lang_restore}}</button>
+			<button class="btn btn-primary pull-right" type="submit"><span class="glyphicon glyphicon-open"></span> {{lang_restore}}</button>
 		</div>
 	</div>
 </form>
