--- a/modules-available/dnbd3/templates/page-serverlist.html
+++ b/modules-available/dnbd3/templates/page-serverlist.html
@@ -203,18 +203,23 @@
 <div id="server-edit-modal" class="modal fade" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4 class="modal-title"><b>{{lang_editProxyHeading}}</b></h4>
-			</div>
-			<div class="modal-body" id="server-edit-body">
-				.
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-primary pull-right" data-dismiss="modal">
-					{{lang_close}}
-				</button>
-			</div>
+			<form method="post" action="?do=dnbd3">
+				<input type="hidden" name="token" value="{{token}}">
+				<input type="hidden" name="action" value="editserver">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title"><b>{{lang_editProxyHeading}}</b></h4>
+				</div>
+				<div class="modal-body" id="server-edit-body">
+					.
+				</div>
+				<div class="modal-footer">
+					<button type="submit" class="btn btn-primary pull-right">
+						<span class="glyphicon glyphicon-floppy-disk"></span>
+						{{lang_save}}
+					</button>
+				</div>
+			</form>
 		</div>
 	</div>
 </div>
