--- a/modules-available/syslog/templates/page-syslog.html
+++ b/modules-available/syslog/templates/page-syslog.html
@@ -19,11 +19,13 @@
 				<label for="notbox">{{lang_not}}</label>
 			</div>
 		</div>
-		<div class="col-sm-10">
-			<input id="filterstring" placeholder="id" value="{{filter}}" name="filter">
-		</div>
-		<div class="col-sm-1">
-			<button class="btn btn-primary" style="display: inline-block;" type="submit">{{lang_go}}</button>
+		<div class="col-sm-11">
+			<div class="input-group">
+				<input id="filterstring" placeholder="id" value="{{filter}}" name="filter">
+				<span style="padding-bottom: 5px;" class="input-group-btn">
+					<button class="btn btn-primary" type="submit">{{lang_applyFilter}}</button>
+				</span>
+			</div>
 		</div>
 	</div>
 </form>
